# prime_numbers

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
src/cli_apps/: prime_number_cli.py  prime_number_cli.sh
src/lib/tigerarcades/: primes.py
src/lib/tigerarcades/tests/: test_primes.py
src/notebooks/: jupyter_notebook.sh  prime_number_notebook.ipynb
